Fixed a lot of things and added testing

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "no-install-puppeteer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Use Puppeteer without installing Puppeteer.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/title.js"
   },
   "repository": {
     "type": "git",
